Fixed some spacing of text

--- a/src/Archive/Archive.scss
+++ b/src/Archive/Archive.scss
@@ -21,8 +21,10 @@ a {
     font-size: 40px;
     font-weight: bolder;
     margin: auto;
+    padding-top: 0px;
     padding-bottom: 30px;
     text-align: center;
+    font-family: Inconsolata;
 }
 
 #welcomeMsg {
